--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Para Mi San Valentín</title>
     <link rel="stylesheet" href="style.css">
+    
+    <meta property="og:title" content="Tengo una sorpresa para ti... ❤️">
+    <meta property="og:description" content="He creado algo especial para celebrar nuestro amor. Haz clic aquí.">
+    <meta property="og:image" content="https://img.icons8.com/fluency/96/love-tree.png"> <meta property="og:url" content="TU_LINK_DE_GITHUB_AQUI">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <div class="main-container">
@@ -28,4 +33,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
