--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <title>Para Mi San Valentín</title>
     <link rel="stylesheet" href="style.css">
-    
-    <meta property="og:title" content="Tengo una sorpresa para ti... ❤️">
-    <meta property="og:description" content="He creado algo especial para celebrar nuestro amor. Haz clic aquí.">
-    <meta property="og:image" content="https://img.icons8.com/fluency/96/love-tree.png"> <meta property="og:url" content="TU_LINK_DE_GITHUB_AQUI">
-    <meta property="og:type" content="website">
 </head>
 <body>
     <div class="main-container">
@@ -30,8 +25,11 @@
             </div>
         </div>
     </div>
+    <audio id="musica" loop>
+        <source src="photograph.mp3" type="audio/mpeg">
+        Tu navegador no soporta el elemento de audio.
+    </audio>
 
     <script src="script.js"></script>
 </body>
-
 </html>
