--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="overlay">
+        <div class="contenido-overlay">
+            <span style="font-size: 50px;">🎁</span>
+            <p>Tengo algo especial para ti...</p>
+            <button id="btn-comenzar">Abrir mi regalo</button>
+        </div>
+    </div>
+
+    <div class="main-container">
     <div class="main-container">
         <div class="message-container">
             <h2 id="titulo" class="hidden">Para mi esposa bella...</h2>
@@ -32,4 +41,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
