--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </div>
 
     <div class="main-container">
-    <div class="main-container">
         <div class="message-container">
             <h2 id="titulo" class="hidden">Para mi esposa bella...</h2>
             <h2 id="titulo_2" class="hidden">El amor de mi vida:</h2>
             <p id="mensaje-texto" class="hidden"></p> 
             <div id="contador-container" class="hidden">
-                <span id="tiempo"></span> </div>
+                <span id="tiempo"></span>
+            </div>
             <h3 id="firma" class="hidden">— I Love You! —</h3>
             <h3 id="firma_2" class="hidden">— For all eternity! —</h3>
         </div>
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+
     <audio id="musica" loop>
         <source src="photograph.mp3" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
@@ -41,5 +42,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
